--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ html{
 .container{
   display: flex;
   flex-wrap: wrap;
-  background-color: white;
+  background-color: gray;
   justify-content: space-around;
   align-items: flex-start;
   padding-bottom: 20px;
